<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ConvertActivity">

<RelativeLayout
    android:id="@+id/beforeConvertingLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone">
    <RelativeLayout
        android:id="@+id/convertImageViewRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/convertImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/gallery"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>




    <LinearLayout
        android:id="@+id/convertLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/convertImageViewRelativeLayout"
        android:layout_marginBottom="@dimen/_20sdp"
        android:weightSum="3">
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
        <TextView
            android:id="@+id/jpgTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_blue"
            android:fontFamily="@font/rowdies_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/jpg"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
        <TextView
            android:id="@+id/pngTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/sharp_corner"
            android:fontFamily="@font/rowdies_bold"
            android:gravity="center"
            android:text="@string/png"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
        <TextView
            android:id="@+id/webpTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/sharp_corner"
            android:fontFamily="@font/rowdies_bold"
            android:gravity="center"
            android:text="@string/webp"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

<TextView
    android:id="@+id/convertingTextView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_30sdp"
    android:gravity="center"
    android:layout_gravity="center"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:background="@drawable/rounded_corner"
    android:text="@string/conver"/>
    </androidx.cardview.widget.CardView>
<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:layout_centerInParent="true"/>
</RelativeLayout>
    <LinearLayout
        android:id="@+id/afterConvertingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_back_arrow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:text="@string/convert_result"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_margin="@dimen/_5sdp"

        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/checkImageView"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/red_logo"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_check_circle_"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/photo_converted"
            android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/convertedImageView"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="@color/red_logo"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:id="@+id/convertedPathTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/okTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_weight="1"
                android:background="@color/color_green"
                android:fontFamily="@font/rowdies_bold"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>