<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <RelativeLayout
        android:id="@+id/beforeConvertingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    <RelativeLayout
        android:id="@+id/convertImageViewRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/compressedImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/gallery"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/qualitySizeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convertImageViewRelativeLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/_9sdp"
            android:visibility="gone"
            android:fontFamily="@font/rowdies_bold"
            android:text="@string/compress_image" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/qualityTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_blue"
                android:fontFamily="@font/rowdies_bold"
                android:gravity="center"
                android:textSize="@dimen/_9sdp"
                android:text="@string/quality"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_40sdp"
            android:visibility="gone"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_weight="1"
                android:fontFamily="@font/rowdies_bold"
                android:gravity="center"
                android:background="@drawable/sharp_corner"
                android:textSize="@dimen/_9sdp"
                android:text="@string/size"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/oneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rowdies_bold"
        android:layout_below="@+id/qualitySizeLayout"
        android:textSize="@dimen/_10sdp"
        android:text="@string/quality" />
<LinearLayout
    android:id="@+id/qualityLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/qualitySizeLayout"
    android:layout_marginTop="@dimen/_10sdp"
    android:weightSum="2">
    <SeekBar
        android:id="@+id/compressionSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="16dp"
        android:max="100" />

    <EditText
        android:id="@+id/seekbarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:fontFamily="@font/rowdies_bold"
         android:textSize="@dimen/_10sdp"
        android:inputType="number"
         android:textColor="@color/black" />
    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rowdies_bold"
         android:textSize="@dimen/_10sdp"
        android:text="@string/percent" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/sizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qualitySizeLayout"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        android:weightSum="2">
        <SeekBar
            android:id="@+id/compressionSizeSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="16dp"
            android:max="2048" />

        <EditText
            android:id="@+id/seekbarSizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:fontFamily="@font/rowdies_bold"
            android:textSize="@dimen/_10sdp"
            android:inputType="number"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/kbTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rowdies_bold"
            android:textSize="@dimen/_10sdp"
            android:text="@string/kb" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_40sdp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/convertingTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:fontFamily="@font/rowdies_bold"
            android:text="@string/compress"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/afterConvertingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_back_arrow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:text="@string/convert_result"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"

            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/checkImageView"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red_logo"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/ic_check_circle_"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/photo_converted"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/convertedImageView"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="@color/red_logo"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:id="@+id/convertedPathTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/okTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_green"
                android:fontFamily="@font/rowdies_bold"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>
